--- a/index.html
+++ b/index.html
@@ -14,16 +14,17 @@
 	<body>
 		<header>
 			<h1>Let's Get Cooking!</h1>
+			<button id="menuButton" class="hamburger-menu" onclick="toggleMenu()">☰</button>
 		</header>
 
 		<div class="container">
 			<!-- File input for uploading the JSON file -->
-			<div id="loadButtons" class="button-container">
+			<div id="loadButtons" class="button-container hidden">
 				<label for="fileInput" id="uploadButton" class="button button-green">Load</label>
 				<input type="file" id="fileInput" accept=".json" />
 				<button id="downloadButton" class="button button-blue" onclick="downloadRecipes()">Save</button>
-				<button id="clearButton" class="button button-red" onclick="clearRecipes()">Clear</button>
 				<button id="addRecipeButton" onclick="addNewRecipe()" class="button button-orange">Add New</button>
+				<button id="purgeButton" class="button button-red" onclick="confirmPurgeRecipes()">Purge</button>
 			</div>
 
 			<!-- Search input for filtering recipes -->
@@ -33,11 +34,11 @@
 			<div id="recipeList" class="recipe-list"></div>
 
 			<!-- Section for displaying recipe details -->
-			<div id="recipeDetail" class="recipe-detail">
+			<div id="recipeDetail" class="recipe-detail hidden">
 				<div id="detailButtons" class="button-container">
 					<button id="backButton" onclick="goBack()" class="button button-gray">Back to Recipe List</button>
 					<button id="editSaveButton" onclick="toggleEditMode()" class="button button-purple">Edit Recipe</button>
-					<button id="deleteButton" onclick="deleteRecipe()" class="button button-red" style="display: none">Delete Recipe</button>
+					<button id="deleteButton" onclick="confirmDeleteRecipe()" class="button button-red hidden">Delete Recipe</button>
 				</div>
 				<div id="detailContent"></div>
 			</div>
